--- a/package.json
+++ b/package.json
@@ -10,10 +10,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@react-navigation/bottom-tabs": "^7.1.3",
+    "@react-navigation/material-top-tabs": "^7.1.0",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/stack": "^7.0.18",
+    "axios": "^1.7.9",
     "expo": "~52.0.18",
+    "expo-camera": "~16.0.9",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.0.2",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-pager-view": "6.5.1",
+    "react-native-paper": "^5.12.5",
+    "react-native-paper-tabs": "^0.10.4",
+    "react-native-qrcode-svg": "^6.3.12",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
