--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
     "axios": "^1.7.9",
-    "expo": "~52.0.18",
-    "expo-camera": "~16.0.9",
-    "expo-status-bar": "~2.0.0",
+    "expo": "^54.0.9",
+    "expo-camera": "~17.0.8",
+    "expo-status-bar": "~3.0.8",
     "firebase": "^11.0.2",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-pager-view": "6.5.1",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-pager-view": "6.9.1",
     "react-native-paper": "^5.12.5",
     "react-native-paper-tabs": "^0.10.4",
     "react-native-qrcode-svg": "^6.3.12",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
